--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-product-component></app-product-component>
+<h1 #appTitle></h1>
+
+<app-product-list-component appHighlight></app-product-list-component>
 <app-cart></app-cart>
 
 <router-outlet></router-outlet>
