--- a/src/app/products/components/product-list/product-list.component.html
+++ b/src/app/products/components/product-list/product-list.component.html
@@ -1,18 +1,8 @@
-<table class="productsList">
-  <thead>
-  <th>Name</th>
-  <th>Price</th>
-  <th>Amount</th>
-  <th></th>
-  </thead>
-  <tbody>
-  <tr *ngFor="let product of products">
-    <td>{{product.name}}</td>
-    <td>{{product.price}}</td>
-    <td>{{product.receivedAmount}}</td>
-    <td>
-      <button [disabled]="!product.isAvailable || (product.receivedAmount === product.orderedAmount)" (click)="onBuy(product)">Buy</button>
-    </td>
-  </tr>
-  </tbody>
-</table>
+<div class="productsList">
+  <app-product-component
+    *ngFor="let product of products"
+    [product]="product"
+    (buy)="onBuy($event)"
+    appHighlight>
+  </app-product-component>
+</div>
